gcc/testsuite/rust/rustc/ui/generic-associated-types/empty_generics_dg.rs
trait Foo {
    type Bar<,>;
// { dg-error "" "" { target *-*-* } .-1 }
}

fn main() {}

